package baseline;

public interface DirectoryMaker {
    //This interface defines the methods for making directories

    void makeDirectory(String root,String newDir);

    void madeDirectory(String root, String dir);
}
