package baseline;

public interface HTMLMaker {
    //This class defines methods for making an HTML file
    void createHTML(String title, String author);
}
